networking/istio/envoyfilter/custom-503-response.yaml
## This EnvoyFilter overwrites the default text response when a 503 is generated by envoy itself. A 503 most commonly is generated when a target service is down.
## The purpose of overwriting the response is to provide a more user friendly error message.
## This does not overwrite the response if a 503 is generated by a service directly.
## The filter is created both at the GATEWAY context and SIDECAR_INBOUND context, as a 503 might be generated in either one depending on what is broken.

## https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/network/http_connection_manager/v3/http_connection_manager.proto.html#envoy-v3-api-msg-extensions-filters-network-http-connection-manager-v3-localreplyconfig
## https://www.envoyproxy.io/docs/envoy/latest/configuration/http/http_conn_man/local_reply

apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: 503-local-reply-overwrite-gateway
  ## The namespace where the istio-ingressgateway is deployed to.
  namespace: knime
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: MERGE
      value:
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          local_reply_config:
            mappers:
            - filter:
                status_code_filter:
                  comparison:
                    op: EQ
                    value:
                      default_value: 503
                      runtime_key: key_b
              status_code: 503
              body:
                inline_string: "Service not available. Please try again later."
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: 503-local-reply-overwrite-sidecar
  ## The namespace where KNIME Business Hub is deployed to.
  namespace: hub
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_INBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: MERGE
      value:
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          local_reply_config:
            mappers:
            - filter:
                status_code_filter:
                  comparison:
                    op: EQ
                    value:
                      default_value: 503
                      runtime_key: key_b
              status_code: 503
              body:
                inline_string: "Service not available. Please try again later."
